# NPCs

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  status.rs
src/commands/: create.rs  hologram.rs  list.rs  looknear.rs  mod.rs  remove.rs  server.rs
src/events/: interact.rs  join.rs  mod.rs  player_move.rs
src/npc/: mod.rs  packets.rs  registry.rs  skin.rs
