[package]
name = "npcs"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { git = "https://github.com/Purdze/Pumpkin.git", branch = "player-events", package = "pumpkin" }
pumpkin-util = { git = "https://github.com/Purdze/Pumpkin.git", branch = "player-events", package = "pumpkin-util" }
pumpkin-data = { git = "https://github.com/Purdze/Pumpkin.git", branch = "player-events", package = "pumpkin-data" }
pumpkin-protocol = { git = "https://github.com/Purdze/Pumpkin.git", branch = "player-events", package = "pumpkin-protocol" }
pumpkin-api-macros = { git = "https://github.com/Purdze/Pumpkin.git", branch = "player-events", package = "pumpkin-api-macros" }

async-trait = "0.1.83"
tokio = { version = "1.42", features = ["full"] }

log = "0.4.22"
toml = "0.8"
uuid = { version = "1", features = ["v5", "serde"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde_json = "1"

[profile.release]
lto = true
